<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/calculationsFragment"
        android:icon="@drawable/ic_calculator"
        android:title="@string/nav_calculations" />

    <item
        android:id="@+id/projectsFragment"
        android:icon="@drawable/ic_projects"
        android:title="@string/nav_projects" />

    <item
        android:id="@+id/aiFragment"
        android:icon="@drawable/ic_ai"
        android:title="@string/nav_ai" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>
