<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:importantForAccessibility="yes"
	android:contentDescription="Reinforcement input form"
	android:theme="@style/Theme.Material3.DayNight">
	<com.google.android.material.card.MaterialCardView
		android:id="@+id/cardview1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/CardViewStyle_total.DayNight"
		app:cardCornerRadius="@dimen/card_corner_radius_small"
		app:cardElevation="2dp">
		<LinearLayout
			android:id="@+id/bg"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:orientation="horizontal"
			android:importantForAccessibility="yes"
			android:contentDescription="Reinforcementdetailssection">
			<LinearLayout
				android:id="@+id/linear78"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_weight="1">
				<LinearLayout
					android:id="@+id/linear701"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/circle_no"
						android:layout_width="32dp"
						android:layout_height="32dp"
						android:layout_margin="5dp"
						android:background="@drawable/circle_background"
						android:gravity="center_horizontal|center_vertical"
						android:text="1.1"
						android:textSize="12sp"
						android:textColor="?attr/colorOnPrimary"
						android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
						android:importantForAccessibility="yes"
						android:contentDescription="Reinforcementnumber"
						android:labelFor="@+id/name" />
					<EditText
						android:id="@+id/name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="12sp"
						android:hint="@string/description_hint"
						android:layout_weight="1"
						android:textColor="?attr/colorOnSurface"
						android:textColorHint="?attr/colorOutline"
						android:focusable="false"
						android:cursorVisible="false"
						android:importantForAccessibility="yes" />
					<com.google.android.material.button.MaterialButton
						android:id="@+id/remove_button"
						android:layout_width="32dp"
						android:layout_height="32dp"
						android:layout_margin="5dp"
						android:textSize="12sp"
						android:textColor="#000000"
						style="@style/Widget.Material3.Button.IconButton"
						android:contentDescription="Removereinforcement"
						app:icon="@drawable/icon_disabled_by_default_round"
						app:iconTint="?attr/colorError" />
				</LinearLayout>
				<com.google.android.material.divider.MaterialDivider
					android:id="@+id/material_divider26"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					style="@style/DividerStyle.DayNight" />
				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/textInputLayout_no"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/input_margin"
					app:helperTextEnabled="true"
					app:helperText="@string/repetitions_helper"
					app:startIconDrawable="@drawable/icon_repeat"
					app:startIconContentDescription="@string/repetitions_icon"
					style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.DayNight">
					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/no"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="12sp"
						android:hint="@string/repetitions_hint"
						android:inputType="numberSigned"
						android:imeOptions="actionNext"
						android:textColor="?attr/colorOnSurface"
						android:textColorHint="?attr/colorOutline"
						android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
						android:importantForAccessibility="yes"
						android:contentDescription="Numberinputfield" />
				</com.google.android.material.textfield.TextInputLayout>
				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/textinputlayout_len"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/input_margin"
					app:helperTextEnabled="true"
					app:helperText="@string/length_helper"
					app:suffixText="m"
					app:startIconDrawable="@drawable/icon_straighten"
					app:startIconContentDescription="@string/length_icon"
					style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.DayNight">
					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/len"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="12sp"
						android:hint="@string/length_hint"
						android:inputType="numberDecimal"
						android:imeOptions="actionNext"
						android:textColor="?attr/colorOnSurface"
						android:textColorHint="?attr/colorOutline"
						android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
						android:importantForAccessibility="yes"
						android:contentDescription="Enterlength" />
				</com.google.android.material.textfield.TextInputLayout>
				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/textinputlayout_radius"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/input_margin"
					app:helperTextEnabled="true"
					app:helperText="@string/diameter_helper"
					app:suffixText="mm"
					app:startIconDrawable="@drawable/icon_radius"
					app:startIconContentDescription="@string/diameter_icon"
					style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.DayNight">
					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/radius"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="12sp"
						android:hint="@string/diameter_hint"
						android:inputType="numberDecimal"
						android:imeOptions="actionDone"
						android:textColor="?attr/colorOnSurface"
						android:textColorHint="?attr/colorOutline"
						android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
						android:importantForAccessibility="yes"
						android:contentDescription="Enterradius" />
				</com.google.android.material.textfield.TextInputLayout>
				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/TextInputLayout_total_weight"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:helperTextEnabled="true"
					app:helperText="@string/total_weight_helper"
					app:suffixText="kg"
					app:startIconDrawable="@drawable/icon_weight"
					app:startIconContentDescription="@string/weight_icon"
					style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.DayNight">
					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/total_weight"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="12sp"
						android:hint="@string/weight_hint"
						android:inputType="numberDecimal"
						android:imeOptions="actionDone"
						android:enabled="false"
						android:textColor="?attr/colorOnSurface"
						android:textColorHint="?attr/colorOutline"
						android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
				</com.google.android.material.textfield.TextInputLayout>
			</LinearLayout>
		</LinearLayout>
	</com.google.android.material.card.MaterialCardView>
</LinearLayout>
